# desktop-use

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
desktop_use/: __init__.py  __main__.py  client.py  server.py
examples/: ai_agent_loop.py  basic_usage.py  batch_commands.py  cross_app_workflow.py  form_filler.py  screen_monitor.py  template_matching.py
tests/: conftest.py  test___main__.py  test_client.py  test_server.py
