[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-use"
version = "0.1.0"
description = "Desktop automation API for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "An Du" },
]
keywords = ["desktop", "automation", "api", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pygetwindow>=0.0.9",
    "pywin32>=306",
    "rapidocr-onnxruntime>=1.3,<2.0",
    "opencv-python>=4.9,<5.0",
    "requests>=2.31",
    "websockets>=12.0",
    "pillow>=10.0",
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "anyio>=4.0",
    "ruff>=0.4.0",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/dutuanan96/desktop-use"
Repository = "https://github.com/dutuanan96/desktop-use"
Issues = "https://github.com/dutuanan96/desktop-use/issues"

[project.scripts]
desktop-use = "desktop_use.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["desktop_use"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
